test/Fail/TerminationOnIrrelevant.err
TerminationOnIrrelevant.agda:14.4-7: error: [SplitOnIrrelevant]
Cannot pattern match against irrelevant argument of type Empty
when checking that the pattern c x has type Empty
